fixed some white space errors and sorted the media queries out as i had placed the styling for max-width 425px in the max-width 768px by mistake

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,12 +12,12 @@
   color: azure;
   padding-left: 20px;
 }
-.logo a{
-    text-decoration: none;
-    color: white;
+.logo a {
+  text-decoration: none;
+  color: white;
 }
-.logo a:hover{
-    color: black;
+.logo a:hover {
+  color: black;
 }
 nav {
   width: 100%;
@@ -31,12 +31,12 @@ nav {
   text-align: center;
   padding-left: 10px;
 }
-.nav-item a{
-    text-decoration: none;
-    color: white;
+.nav-item a {
+  text-decoration: none;
+  color: white;
 }
-.nav-item a:hover{
-    color: black;
+.nav-item a:hover {
+  color: black;
 }
 .navbar-list {
   padding: 0px;
@@ -50,39 +50,39 @@ nav {
 }
 
 /* Body */
-body{
-    /* overflow-x: hidden; */
-    background-color: #6F5E76;
+body {
+  /* overflow-x: hidden; */
+  background-color: #6f5e76;
 }
-.content-img1{
+.content-img1 {
   width: 50%;
   padding: 1%;
   height: inherit;
   float: right;
 }
-.content-img2{
+.content-img2 {
   width: 50%;
   padding: 1%;
   height: inherit;
   float: left;
 }
-.header{
-    width: 100%;
-    height: 580px;
+.header {
+  width: 100%;
+  height: 580px;
 }
-.hdr-img{
-    width: 100%;
-    height: inherit;
-    opacity: 0.7;
+.hdr-img {
+  width: 100%;
+  height: inherit;
+  opacity: 0.7;
 }
-.center1{
+.center1 {
   height: 380px;
 }
-.center2{
+.center2 {
   height: 380px;
 }
 
-.center1 p{
+.center1 p {
   width: 50%;
   padding-top: 5%;
   padding-left: 2%;
@@ -93,7 +93,7 @@ body{
   color: white;
   opacity: 0.7;
 }
-.center2 p{
+.center2 p {
   width: 50%;
   padding-top: 5%;
   padding-left: 2%;
@@ -114,23 +114,23 @@ body{
   background-color: rgb(226, 226, 226);
   margin: 5px;
 }
-.slogan{
-    position: absolute;
-    top: 30%;
-    width: 100%;
-    text-align: center;
-    color: darkblue;
-    font-size: 60px;
-    font-style: italic;
+.slogan {
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  color: darkblue;
+  font-size: 60px;
+  font-style: italic;
 }
 
 /* Footer */
-.footer{
+.footer {
   width: 100%;
-  height: 60px; 
+  height: 60px;
   background-color: dimgrey;
 }
-.copyright{
+.copyright {
   color: white;
   font-size: 20px;
   padding: 15px;
@@ -143,11 +143,15 @@ body{
   }
 }
 @media (max-width: 768px) {
-   /* body{
-     overflow-x: hidden; 
-  } */
-/* navbar */
-  .nav-links{
+  .slogan {
+    top: 22%;
+    color: white;
+    font-size: 30px;
+  }
+}
+@media (max-width: 425px) {
+  /* navbar */
+  .nav-links {
     position: absolute;
     right: 0px;
     height: fit-content;
@@ -160,54 +164,48 @@ body{
     z-index: 1;
     transition: transform 0.5s ease-in;
     opacity: 0;
-}
-.nav-item{
-  font-size: 20px;
-}
-.nav-active{
-  width: 50%;
-  opacity: 1;
-}
-.menu{
-  display: block;
-  float: right;
-  margin-top: 15px;
-  margin-right: 15px;
-}
-/* body */
-.center1{
-  height: fit-content;
-}
-.center2{
-  display: none;
-}
-.center1 p{
-  width: 100%;
-  font-size: 15px;
-}
-.content-img1{
-  width: 75%;
-  margin-left: 12.5%;
-  height: unset;
-  float: none;
-}
-.header{
-  height: 244px;
-}
-.slogan{
-  top: 22%;
-  color: white;
-  font-size: 30px;
-}
-/* footer */
-}
-@media (max-width: 375px){
-  /* body{
-    overflow-x: hidden;
-  } */
-  .slogan{
+  }
+  .nav-item {
+    font-size: 20px;
+  }
+  .nav-active {
+    width: 50%;
+    opacity: 1;
+  }
+  .menu {
+    display: block;
+    float: right;
+    margin-top: 15px;
+    margin-right: 15px;
+  }
+  /* body */
+  .center1 {
+    height: fit-content;
+  }
+  .center2 {
+    display: none;
+  }
+  .center1 p {
+    width: 100%;
+    font-size: 15px;
+  }
+  .content-img1 {
+    width: 75%;
+    margin-left: 12.5%;
+    height: unset;
+    float: none;
+  }
+  .header {
+    height: 244px;
+  }
+  .slogan {
     top: 25%;
     color: white;
     font-size: 30px;
+  }
+  /* footer */
+  .footer p {
+    font-size: 15px;
+    text-align: center;
   }
 }
